--- a/site/index.html
+++ b/site/index.html
@@ -363,7 +363,7 @@ docs/
 </code></pre>
 <h3 id="heading-3">Heading 3</h3>
 <p>paragraph</p>
-<p><img alt="image06" src="_images/Paystack.png" /></p>
+<p><img alt="image06" src="https://raw.githubusercontent.com/Celso-Ricardo/phpwallet-payment-gateway-script-docs/master/docs/_images/Paystack.png" /></p>
 <p>test</p>
                 
                   
