--- a/index.html
+++ b/index.html
@@ -587,6 +587,10 @@
 <li>go to <code>.. /public_html/application/http/controllers/PaystackController.php</code> and edit the PaystackController.php file</li>
 </ul>
 <p><a href="img/paystack_config.png"><img alt="image04" src="img/paystack_config.png" /></a></p>
+<ul>
+<li>in PayStack developer dashboard go to <code>Test Callback URL</code> replace <code>http:\\domain.com</code> with your domain name</li>
+</ul>
+<p><a href="img/paystack_config_developer.png"><img alt="image000" src="img/paystack_config_developer.png" /></a></p>
 <h3 id="activate-paystack-gateway">Activate Paystack Gateway</h3>
 <ul>
 <li>Activate the Paystack gateway in settings menu. ( process described <a href="#step-2_1">here</a>  )</li>
